--- a/shcool news/index.html
+++ b/shcool news/index.html
@@ -210,15 +210,17 @@
             </article>
 
             <!-- Новость 3 -->
-            <article class="news-card">
-                <div class="news-image">[Фото: Театральная постановка]</div>
-                <div class="news-content">
-                    <div class="news-date">15 октября 2023</div>
-                    <h3>Драматический кружок представляет новый спектакль</h3>
-                    <p>Ученики 8-х классов готовят премьеру по пьесе Чехова. Репетиции идут полным ходом, билеты раскупаются быстро.</p>
-                    <a href="#" class="read-more">Читать далее...</a>
-                </div>
-            </article>
+           <article class="news-card">
+    <div class="news-image">
+        <img src="images/den-znaniy.jpg" alt="Команда школы победила в Робофесте" style="width: 100%; height: 100%; object-fit: cover;">
+    </div>
+    <div class="news-content">
+        <div class="news-date">20 октября 2023</div>
+        <h3>Наша команда победила в "Робофесте"!</h3>
+        <p>Команда старшеклассников завоевала первое место на региональном этапе соревнований по робототехнике и готовится к поездке в Москву.</p>
+        <a href="#" class="read-more">Читать далее...</a>
+    </div>
+</article>
 
         </div>
     </main>
