--- a/shcool news/index.html
+++ b/shcool news/index.html
@@ -212,7 +212,7 @@
             <!-- Новость 3 -->
            <article class="news-card">
     <div class="news-image">
-        <img src="images/den-znaniy.jpg" alt= style="width: 100%; height: 100%; object-fit: cover;">
+        <img src="images/den-znaniy.jpg" alt="Празднование Дня знаний в школе" style="width: 100%; height: 100%; object-fit: cover;">
     </div>
     <div class="news-content">
         <div class="news-date">20 октября 2023</div>
